...

    <ImageView
        android:id="@+id/tcm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/abm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/esm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/udm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/odm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/cdm_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/carTemps_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_imageViews_feedback_area_critical"
...
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_critical"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/batteryTemp_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car_temps_off" />

    <ImageView
        android:id="@+id/frontRightMotorTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/frontLeftMotorTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/frontHbridgeTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/rearRightMotorTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/rearLeftMotorTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...

    <ImageView
        android:id="@+id/rearHbridgeTemps_imageView"
        android:layout_width="@dimen/width_inner_imageViews_feedback_area_critical"
        android:layout_height="@dimen/height_inner_imageViews_feedback_area_critical"
...
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_critical"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/shiftRegisterTemp_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/batteries_temp_off" />
...
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_critical"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/raspiTemp_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shift_register_temp_off" />
...

    <ImageView
        android:id="@+id/leftTurn_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/emergency_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/rightTurn_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/reverse_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/lights_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...
    <!-- cruise control -->
    <ImageView
        android:id="@+id/cruiseControl_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/engineStartStop_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/parkingBrake_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <ImageView
        android:id="@+id/handbrake_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
...

    <SeekBar
        android:id="@+id/steering_seekBar"
        android:layout_width="@dimen/width_steering_seekBar"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/vehicle_speed_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
            android:id="@+id/throttleNbrake_mySeekBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

    <ImageView
        android:id="@+id/suspension_front_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/suspension_rear_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/motor_speed_limiter_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/differential_slippery_limiter_front_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/differential_slippery_limiter_rear_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...

    <ImageView
        android:id="@+id/handling_assistance_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
...
